--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
-
-
-logging.level.org.springframework.web=
+logging.level.org.springframework.web=DEBUG
+security.basic.enabled=false
+security.ignored=/**
+management.security.enabled=false
 jwt.secret.name=mySecret
